--- a/Selenium/test-output/emailable-report.html
+++ b/Selenium/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9.820</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">32.556</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">automation.testsuite.GlobalSQA</td><td><a href="#m0">chooseCountryOption</a></td><td rowspan="1">1732034041709</td><td rowspan="1">5245</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">automation.testsuite.BTVN_B13_Crmstar_LoginTest</td><td><a href="#m0">loginFail_IncorrectEmail</a></td><td rowspan="1">1732391987440</td><td rowspan="1">227</td></tr><tr class="passedeven"><td><a href="#m1">loginFail_IncorrectEmailAndPassword</a></td><td rowspan="1">1732391995688</td><td rowspan="1">217</td></tr><tr class="passedeven"><td><a href="#m2">loginFail_IncorrectPassword</a></td><td rowspan="1">1732391991625</td><td rowspan="1">223</td></tr><tr class="passedeven"><td><a href="#m3">loginSuccessfully</a></td><td rowspan="1">1732391982639</td><td rowspan="1">1271</td></tr><tr class="passedeven"><td><a href="#m4">logout</a></td><td rowspan="1">1732391999966</td><td rowspan="1">11011</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">automation.testsuite.GlobalSQA#chooseCountryOption</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">automation.testsuite.BTVN_B13_Crmstar_LoginTest#loginFail_IncorrectEmail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">automation.testsuite.BTVN_B13_Crmstar_LoginTest#loginFail_IncorrectEmailAndPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">automation.testsuite.BTVN_B13_Crmstar_LoginTest#loginFail_IncorrectPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">automation.testsuite.BTVN_B13_Crmstar_LoginTest#loginSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">automation.testsuite.BTVN_B13_Crmstar_LoginTest#logout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
