--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--132280263\testng-customsuite.xml</span>
+                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--642238190\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTVN_B14_Alada_LoginTest" class="method navigator-link" hash-for-method="LoginSuccessfully">LoginSuccessfully</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="LoginSuccessfully">LoginSuccessfully</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="UpdatePasswordSuccessfully">UpdatePasswordSuccessfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,7 +127,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automation.testsuite.BTVN_B14_Alada_LoginTest</span>
+              <span class="class-name">automation.testsuite.Tedu_CapNhapMatKhauTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -132,12 +137,19 @@
                   <span class="method-name">LoginSuccessfully</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="UpdatePasswordSuccessfully">
+                  </a> <!-- UpdatePasswordSuccessfully -->
+                  <span class="method-name">UpdatePasswordSuccessfully</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--132280263\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--642238190\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;automation.testsuite.BTVN_B14_Alada_LoginTest&quot;/&gt;
+      &lt;class name=&quot;automation.testsuite.Tedu_CapNhapMatKhauTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginSuccessfully')
-data.setCell(0, 2, 'automation.testsuite.BTVN_B14_Alada_LoginTest')
-data.setCell(0, 3, 39956);
+data.setCell(0, 1, 'UpdatePasswordSuccessfully')
+data.setCell(0, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
+data.setCell(0, 3, 11600);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'LoginSuccessfully')
+data.setCell(1, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
+data.setCell(1, 3, 7295);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 39 seconds</span>
+              <span class="suite-total-time">Total running time: 18 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,14 +237,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">automation.testsuite.BTVN_B14_Alada_LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">automation.testsuite.Tedu_CapNhapMatKhauTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">openFireFox</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
+                <span class="method-name">UpdatePasswordSuccessfully</span>
+                <span class="method-start">2761 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">openFireFox</span>
+                <span class="method-start">14363 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
                 <span class="method-name">LoginSuccessfully</span>
-                <span class="method-start">24629 ms</span>
+                <span class="method-start">17589 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
