--- a/Selenium/test-output/old/Default suite/classes.html
+++ b/Selenium/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>automation.testsuite.BTVN_B14_Alada_LoginTest</td>
+<td>automation.testsuite.Tedu_CapNhapMatKhauTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,6 +12,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>LoginSuccessfully</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>UpdatePasswordSuccessfully</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
