--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--1300349244\testng-customsuite.xml</span>
+                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-904541913\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="LoginSuccessfully">LoginSuccessfully</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully_emptyValue">SearchSuccessfully_emptyValue</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully_keywordNoResults">SearchSuccessfully_keywordNoResults</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully_specialCharacters">SearchSuccessfully_specialCharacters</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.Tedu_CapNhapMatKhauTest" class="method navigator-link" hash-for-method="SearchSuccessfully_validValue">SearchSuccessfully_validValue</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage" class="method navigator-link" hash-for-method="AlertPractise">AlertPractise</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,42 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automation.testsuite.Tedu_CapNhapMatKhauTest</span>
+              <span class="class-name">automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginSuccessfully">
-                  </a> <!-- LoginSuccessfully -->
-                  <span class="method-name">LoginSuccessfully</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="SearchSuccessfully_emptyValue">
-                  </a> <!-- SearchSuccessfully_emptyValue -->
-                  <span class="method-name">SearchSuccessfully_emptyValue</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="SearchSuccessfully_keywordNoResults">
-                  </a> <!-- SearchSuccessfully_keywordNoResults -->
-                  <span class="method-name">SearchSuccessfully_keywordNoResults</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="SearchSuccessfully_specialCharacters">
-                  </a> <!-- SearchSuccessfully_specialCharacters -->
-                  <span class="method-name">SearchSuccessfully_specialCharacters</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="SearchSuccessfully_validValue">
-                  </a> <!-- SearchSuccessfully_validValue -->
-                  <span class="method-name">SearchSuccessfully_validValue</span>
+                  <a name="AlertPractise">
+                  </a> <!-- AlertPractise -->
+                  <span class="method-name">AlertPractise</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--1300349244\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-904541913\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -194,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;automation.testsuite.Tedu_CapNhapMatKhauTest&quot;/&gt;
+      &lt;class name=&quot;automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -234,32 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'SearchSuccessfully_specialCharacters')
-data.setCell(0, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(0, 3, 10751);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'SearchSuccessfully_keywordNoResults')
-data.setCell(1, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(1, 3, 10736);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'SearchSuccessfully_emptyValue')
-data.setCell(2, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(2, 3, 10651);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'SearchSuccessfully_validValue')
-data.setCell(3, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(3, 3, 10548);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'LoginSuccessfully')
-data.setCell(4, 2, 'automation.testsuite.Tedu_CapNhapMatKhauTest')
-data.setCell(4, 3, 7181);
+data.setCell(0, 1, 'AlertPractise')
+data.setCell(0, 2, 'automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage')
+data.setCell(0, 3, 810);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 49 seconds</span>
+              <span class="suite-total-time">Total running time: 810 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -285,46 +221,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">automation.testsuite.Tedu_CapNhapMatKhauTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">openFireFox</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginSuccessfully</span>
-                <span class="method-start">2821 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">openFireFox</span>
-                <span class="method-start">10007 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">SearchSuccessfully_validValue</span>
-                <span class="method-start">12055 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">openFireFox</span>
-                <span class="method-start">22604 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">SearchSuccessfully_keywordNoResults</span>
-                <span class="method-start">24668 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">openFireFox</span>
-                <span class="method-start">35405 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">SearchSuccessfully_emptyValue</span>
-                <span class="method-start">37495 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">openFireFox</span>
-                <span class="method-start">48147 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">SearchSuccessfully_specialCharacters</span>
-                <span class="method-start">50260 ms</span>
+                <span class="method-name">AlertPractise</span>
+                <span class="method-start">6238 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
