--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-904541913\testng-customsuite.xml</span>
+                    <span>C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--318835893\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage" class="method navigator-link" hash-for-method="AlertPractise">AlertPractise</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest" class="method navigator-link" hash-for-method="messengerIframe">messengerIframe</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage</span>
+              <span class="class-name">automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AlertPractise">
-                  </a> <!-- AlertPractise -->
-                  <span class="method-name">AlertPractise</span>
+                  <a name="messengerIframe">
+                  </a> <!-- messengerIframe -->
+                  <span class="method-name">messengerIframe</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse-904541913\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PREDATOR\AppData\Local\Temp\testng-eclipse--318835893\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage&quot;/&gt;
+      &lt;class name=&quot;automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AlertPractise')
-data.setCell(0, 2, 'automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage')
-data.setCell(0, 3, 810);
+data.setCell(0, 1, 'messengerIframe')
+data.setCell(0, 2, 'automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest')
+data.setCell(0, 3, 8399);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 810 ms</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,14 +221,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">openFireFox</span>
+                <span class="method-name">openChrome</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">AlertPractise</span>
-                <span class="method-start">6238 ms</span>
+                <span class="method-name">messengerIframe</span>
+                <span class="method-start">4323 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
