--- a/Selenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d9386">  <td>24/12/05 22:48:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BTVN_Buoi16_DemoGuruAlertPage.AlertPractise()[pri:0, instance:automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage@942a29c]">AlertPractise</td> 
+<tr bgcolor="6d9386">  <td>24/12/10 23:12:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BTNVN_Buoi17_B2_IframeZaloTest.messengerIframe()[pri:1, instance:automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest@1ed6388a]">messengerIframe</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/12/05 22:48:50</td>   <td>-6237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BTVN_Buoi16_DemoGuruAlertPage.openFireFox()[pri:0, instance:automation.testsuite.BTVN_Buoi16_DemoGuruAlertPage@942a29c]">&gt;&gt;openFireFox</td> 
+<tr bgcolor="6d9386">  <td>24/12/10 23:12:09</td>   <td>-4322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BTNVN_Buoi17_B2_IframeZaloTest.openChrome()[pri:0, instance:automation.testsuite.BTNVN_Buoi17_B2_IframeZaloTest@1ed6388a]">&gt;&gt;openChrome</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
